# src/routes.ts
@@ -4,6 +4,7 @@ import { UserController } from './controllers/UserController'
 import { BadRequestError } from './helpers/api-erros'
 import { RoleController } from './controllers/RoleController'
 import { authMiddleware } from './middlewares/authMiddleware'
+import { is } from './middlewares/permissions'
 
 
 const routes = Router()
@@ -16,14 +17,14 @@ routes.get('/', (req, res) => {
 routes.post('/login', new LoginController().login)
 routes.post('/usuario', new UserController().create)
 
-// routes.use(authMiddleware)
+routes.use(authMiddleware)
 routes.get('/usuario', new UserController().index)
 routes.put('/usuario/:id', new UserController().update)
 routes.delete('/usuario/:id', new UserController().delete)
 routes.get('/profile', new LoginController().getProfile)
 
 routes.post('/role', new RoleController().create)
-routes.get('/role', new RoleController().index)
+routes.get('/role', is(["Admin"]), new RoleController().index)
 routes.put('/role/:id', new RoleController().update)
 routes.delete('/role/:id', new RoleController().delete)
 
